# NeuraPose

./: .dockerignore  .gitignore  ARCHITECTURE_MAP.md  Dockerfile  Makefile  agent.md  agente.txt  docker-compose.yml  exit  pyproject.toml  scripts.ps1
neurapose_backend/: Dockerfile  README.md  __init__.py  celery_app.py  config_master.py  docker-compose.yml  main.py  picker.py  sync_constants.py
neurapose_backend/LSTM/: __init__.py
neurapose_backend/app/: __init__.py  log_service.py  state.py  testar_modelo.py  user_config_manager.py
neurapose_backend/cuda/: gpu_utils.py
neurapose_backend/detector/: __init__.py  yolo_detector.py  yolo_stream.py
neurapose_backend/global/: state.py
neurapose_backend/globals/: __init__.py  hardware_monitor.py  state.py
neurapose_backend/nucleo/: filtros.py  geometria.py  log_service.py  pipeline.py  pipeline_unificado.py  sanatizer.py  sequencia.py  suavizacao.py  tracking_utils.py  user_config_manager.py  video_reader.py  video_utils.py  visualizacao.py  websocket_service.py
neurapose_backend/otimizador/: __init__.py
neurapose_backend/pre_processamento/: analisando_pt.py  analisar_modelos.py  anotando_classes.py  anotando_classes_temp.py  converte_pt.py  processar.py  reid-manual.py  reid_manual.py  renomear_videos.py  split-dataset-label.py  split_dataset_label.py  verifica_banco.py
neurapose_backend/routes/: __init__.py  annotation.py  config.py  (+6 more)
neurapose_frontend/: next.config.ts  package-lock.json  package.json
neurapose_tauri/: Dockerfile  index.html  package-lock.json  package.json
scripts/: install_codec.py
(+108 files in other folders)
